# civiccore

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README.txt  SECURITY.md  SUPPORT.md  USER-MANUAL.docx  USER-MANUAL.md  USER-MANUAL.txt  pyproject.toml
.claude/: settings.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml  release-preflight.yml  release.yml
civiccore/: __init__.py  release_provenance.py
civiccore/audit/: __init__.py  primitives.py
civiccore/auth/: __init__.py  bearer.py  trusted_headers.py
civiccore/catalog/: __init__.py
civiccore/city_profile/: __init__.py  models.py
civiccore/connectors/: __init__.py  delta.py  imports.py  manifest.py  sync.py
civiccore/db/: __init__.py
civiccore/exemptions/: __init__.py
civiccore/exports/: __init__.py  bundle.py
civiccore/ingest/: __init__.py  contracts.py
civiccore/llm/: __init__.py  context.py  factory.py  structured.py
civiccore/llm/providers/: __init__.py  anthropic.py  base.py  (+4 more)
civiccore/migrations/: __init__.py  alembic.ini  env.py  guards.py  runner.py
civiccore/models/: __init__.py
civiccore/notifications/: __init__.py  notice.py
civiccore/onboarding/: __init__.py  profile.py
civiccore/provenance/: __init__.py  contracts.py
civiccore/scaffold/: __init__.py
civiccore/scheduling/: __init__.py  cron.py
civiccore/search/: __init__.py
civiccore/security/: __init__.py  at_rest.py  config_validation.py  host_validation.py
civiccore/testing/: __init__.py  mock_city.py
civiccore/verification/: __init__.py  browser_evidence.py
docs/: SUPERVISOR.md  browser-qa-civiccore-v0.11.0-summary.md  browser-qa-civiccore-v0.12.0-summary.md  browser-qa-civiccore-v0.13.0-summary.md  browser-qa-civiccore-v0.14.0-summary.md  browser-qa-civiccore-v0.14.1-summary.md  browser-qa-civiccore-v0.15.0-summary.md  browser-qa-civiccore-v0.16.0-summary.md  browser-qa-civiccore-v03-summary.md  browser-qa-co3-tier1-ledger-summary.md  browser-qa-v0190-summary.md  browser-qa-v0200-summary.md  browser-qa-v0210-summary.md  browser-qa-v0220-release-provenance-cdp.json  browser-qa-v0220-release-provenance-summary.md  browser-qa-v0220-summary.md  browser-qa-v0221-summary.md  github-discussions-seed.md  index.html
docs/diagrams/: civiccore-extraction-map.mmd  migration-order.mmd  provider-abstraction.mmd
docs/ops/: civiccore-tier1-retrofit-ledger.json  civiccore-tier1-retrofit-ledger.md  historical-provenance-draft.md  historical-provenance.md  release-attestation.schema.json  release-signing.md  sigstore-release-workflow-draft.yml
scripts/: check-tier1-ledger.py  gen-user-manual.py  verify-release-provenance.py  verify-release.sh
tests/: test_audit_primitives.py  test_auth_bearer.py  test_baseline_idempotency.py  test_city_profile.py  test_connector_delta.py  test_connector_imports.py  test_connector_manifest.py  test_connector_sync.py  test_export_bundle.py  test_github_workflows.py  test_ingest_contracts.py  test_llm_context.py  test_llm_migration_0002.py  test_llm_providers.py  test_llm_public_api.py  test_llm_registry_service.py  test_llm_structured.py  test_llm_templates.py  test_notifications_notice.py  test_onboarding_profile.py  test_provenance_contracts.py  test_public_api_v03.py  test_release_provenance.py  test_scheduling_cron.py  test_search_helpers.py  test_security_at_rest.py  test_security_config_validation.py  test_security_host_validation.py  test_smoke.py  test_testing_mock_city.py  test_tier1_retrofit_ledger.py  test_verification_browser_evidence.py
(+32 files in other folders)
