[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "civiccore"
version = "0.21.0"
description = "CivicSuite shared platform package - migrations, shared SQLAlchemy base, LLM abstraction, audit/provenance, ingest and connector contracts, connector sync primitives, connector delta planning, reusable mock-city proof contracts, connector security helpers, startup config validation helpers, schedule validation helpers, encrypted config primitives, notice helpers, onboarding profile helpers, search access helpers, small auth helpers, manifests, exports, and city profile primitives"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Scott Converse" },
    { name = "CivicSuite contributors" },
]
keywords = [
    "civic-tech",
    "municipal",
    "open-records",
    "foia",
    "fastapi",
    "self-hosted",
    "local-llm",
    "ollama",
    "civicsuite",
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Other Audience",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
# Dep pins below mirror civicrecords-ai/backend/pyproject.toml exactly for the
# subsystems CivicCore extracts (auth, audit, LLM, ingest, search, connectors,
# notifications, onboarding, exemptions, verification, models, migrations,
# scaffold). civicrecords-ai pins requires-python = ">=3.12"; CivicCore widens
# to ">=3.11" because it is a shared library and must support modules that
# may not have moved to 3.12 yet.
dependencies = [
    "fastapi>=0.135.0",
    "uvicorn[standard]>=0.44.0",
    "sqlalchemy[asyncio]>=2.0.49",
    "asyncpg>=0.31.0",
    "alembic>=1.18.0",
    "pgvector>=0.4.2",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.13.0",
    "fastapi-users[sqlalchemy]>=15.0.0",
    "python-jose[cryptography]>=3.5.0",
    "passlib[bcrypt]>=1.7.4",
    "celery>=5.6.0",
    "croniter>=2.0.0",
    "redis>=5.0.0,<8.0.0",
    "httpx>=0.28.0",
    "pdfplumber>=0.11.0",
    "python-docx>=1.1.0",
    "openpyxl>=3.1.0",
    "beautifulsoup4>=4.12.0",
    "Pillow>=11.0.0",
    "pytesseract>=0.3.10",
    "aiofiles>=24.1.0",
    "PyJWT>=2.8.0",
    "regex>=2024.0.0",
]

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.40.0",
]
openai = [
    "openai>=1.50.0",
]
dev = [
    "build>=1.2.0",
    "psycopg2-binary>=2.9.0",
    "pytest>=9.0.0",
    "pytest-asyncio>=1.0.0",
    "respx>=0.22.0",
    "ruff>=0.11.0",
    "testcontainers[postgres]>=4.9.0",
    # LLM provider SDKs included in dev so test_llm_providers runs without
    # skips per Hard Rule 4a. End users still install [openai]/[anthropic]
    # extras separately for production use.
    "openai>=1.50.0",
    "anthropic>=0.40.0",
]

[project.urls]
Homepage = "https://github.com/CivicSuite/civiccore"
Documentation = "https://github.com/CivicSuite/civicsuite"
Issues = "https://github.com/CivicSuite/civiccore/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["civiccore*"]

[tool.setuptools.package-data]
civiccore = ["migrations/alembic.ini"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
line-length = 100
